criacao dos testes faltantes

--- a/pom.xml
+++ b/pom.xml
@@ -33,4 +33,33 @@
 			<version>10.13.1.1</version>
 		</dependency>
 	</dependencies>
+        <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.9</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>br/edu/unidavi/webdev/poo/basics/Principal.*</exclude>
+                                <exclude>br/edu/unidavi/webdev/poo/basics/Basquete.*</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
